tests/snapshots/integration__integration_tests__merge__merge_squash_deterministic.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mSquashing 3 commits into a single commit [90m(3 files, [32m+3[39m[39m[90m)[39m...[39m
🔄 [36mGenerating squash commit message...[39m
💡 [2mUsing fallback commit message. Run [90mwt config --help[39m[2m for LLM setup guide[22m[22m
[107m [0m  [1mSquash commits from main[22m
[107m [0m  
[107m [0m  Combined commits:
[107m [0m  - feat: add file 1
[107m [0m  - fix: update logic
[107m [0m  - docs: update readme
✅ [32mSquashed @ [2m27eb169[22m[39m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2m27eb169[22m (no rebase needed)[39m
[107m [0m  * [33m27eb169[m Squash commits from main
[107m [0m   file1.txt | 1 [32m+[m
[107m [0m   file2.txt | 1 [32m+[m
[107m [0m   file3.txt | 1 [32m+[m
[107m [0m   3 files changed, 3 insertions(+)
✅ [32mMerged to [1mmain[22m [90m(1 commit, 3 files, [32m+3[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mfeature[22m worktree & branch in background (already in main)[39m[39m
